--- a/src/WinUIShell.Server/UIElements/Pages/Page01.xaml
+++ b/src/WinUIShell.Server/UIElements/Pages/Page01.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="WinUIShell.Server.UIElements.Pages.Page01"
+    x:Class="WinUIShell.Server.Page01"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WinUIShell.Server.UIElements.Pages"
